String constructed from Literals should be non-empty https://bugs.webkit.org/show_bug.cgi?id=108103

Reviewed by Eric Carlson.

Source/WebCore:

Strings from literal should not be constructed from empty strings. Use emptyString()
instead.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::canPlayType):

Source/WTF:

For efficiency, the construction from literal only works with valid non-empty strings.
One of the constructor was changed to fix an error from HTMLMediaElement.

This patch replaces the branch with an assertions.

* wtf/text/StringImpl.cpp:
(WTF::StringImpl::createFromLiteral):


Canonical link: https://commits.webkit.org/126338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141030 268f45cc-cd09-0410-ab3c-d52691b4dbfc